--- a/less/zing.less
+++ b/less/zing.less
@@ -13,6 +13,7 @@
 @import "font";
 @import "variables";
 @import "mixins";
+@import "grids";
 
 /*
 ***
@@ -20,5 +21,5 @@ Import other files here
 ***
 */
 
-//@import "modules/base";
-//@import "modules/layout";
+@import "modules/base";
+@import "modules/layout";
