correction selecteur css

--- a/less/grids.less
+++ b/less/grids.less
@@ -11,46 +11,46 @@
 
 /* Grid Childs */
 [class^="grid-"] > * {
-    width: ~'calc(100% * 1 / @{number} - @{gutter} - .01px)';
+    width: ~'calc(100% * 1 / @{number-columns} - @{gutter} - .01px)';
     .box-sizing();
     flex: 0 0 auto; // Flex-grow et flex-shrink
     margin-left: @gutter;
 }
 
 /* Equal Grids */
-[class=^"grid-2"] {
+[class^="grid-2"] {
     .grid(2);
 }
 
-[class=^"grid-3"] {
+[class^="grid-3"] {
     .grid(3);
 }
 
-[class=^"grid-4"] {
+[class^="grid-4"] {
     .grid(4);
 }
 
-[class=^"grid-5"] {
+[class^="grid-5"] {
     .grid(5);
 }
 
-[class=^"grid-6"] {
+[class^="grid-6"] {
     .grid(6);
 }
 
-[class=^"grid-7"] {
+[class^="grid-7"] {
     .grid(7);
 }
 
-[class=^"grid-8"] {
+[class^="grid-8"] {
     .grid(8);
 }
 
-[class=^"grid-10"] {
+[class^="grid-10"] {
     .grid(10);
 }
 
-[class=^"grid-12"] {
+[class^="grid-12"] {
     .grid(12);
 }
 
